# aetheriac-engine-v2

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AE_V2_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  DEVELOPMENT_WORKFLOW.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  eval_amb_m1.json  eval_concepts.json  eval_concepts_m1.json  eval_defs.json  eval_defs_m1.json  eval_negatives_m1.json  eval_trouble.json  eval_trouble_m1.json  perf_http.json  pyproject.toml  pytest.ini
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
ae2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ae2/api/: auth.py  main.py
ae2/assembler/: __init__.py  concept.py  definition.py  definition_assembler.py  dispatcher.py  playbook.py
ae2/common/: ttl_lru.py
ae2/concepts/: authoring.py  compiler.py  diff.py  errors.py  models.py  schema_v1.json  search.py  store.py
ae2/contracts/: models.py  settings.py
ae2/eval/: __init__.py  metrics.py  report_schema.json  run.py
ae2/eval/datasets/: ambiguous.m1.jsonl  concepts.m1.jsonl  concepts.negatives.jsonl  concepts.sample.jsonl  defs.m1.jsonl  defs.sample.jsonl  negatives.m1.jsonl  trouble.m1.jsonl  trouble.sample.jsonl
ae2/obs/: logging.py  metrics.py  middleware.py
ae2/playbooks/: arp_anomalies.py  bgp_flap.py  bgp_neighbor_down.py  engine.py  lacp_port_channel_down.py  models.py  ospf_lsa_storm.py  primitives.py  tcp_handshake.py  utils.py
ae2/retriever/: hybrid_ranker.py  index_store.py
ae2/rfc/: index_builder.py  sync.py
ae2/router/: __init__.py  definitional_router.py  lexicon.py  router.py
ae2/security/: __init__.py  auth.py  config.py  middleware.py  models.py  utils.py
ae2/storage/: index_builder.py
ae2/testing/: golden_tests.py
ae2/vendor_ir/: iosxe.py  junos.py  models.py
concepts/: concept:arp:basics:v1.json  concept:ip:basics:v1.json
constraints/: ci.txt
data/concepts/: concept:arp:v1.json  concept:nonexistent_concept:v1.json  concept:ospf:v1.json  concepts_manifest.json  manifest.json
docs/playbooks/: arp.md  bgp_flap.md  ospf_lsa_storm.md
scripts/: build_index.py  bump_version.py  perf_http.py  serve.sh  sync_rfc_min.sh
tests/: ci_smoke_test.py  conftest.py  test_basic.py  test_concepts.py  test_concepts_negatives.py  test_concepts_schema.py  test_hybrid.py  test_playbooks.py  test_playbooks_arp.py  test_playbooks_bgp.py  test_playbooks_bgp_flap.py  test_playbooks_lacp.py  test_playbooks_ospf_lsa.py  test_playbooks_tcp.py  test_router_assembler.py  test_security.py
